<resources>
    <string name="app_name">Recipes</string>
    <string name="item_name_title">Item name large for test the text view</string>
    <string name="description_title">Description</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="search_title">Search</string>
    <string name="cuisines_title">Cuisines</string>
    <string name="map_recipe_title">Map Recipe</string>
    <string name="not_found_records_title">Not found records</string>

    <string name="search_hint">Search recipe</string>

    <string name="go_to_map_action">Open map location</string>

    <string name="image_item_description">imageRecipeItem</string>
    <string name="image_icon_description">imageRecipeIcon</string>
    <string name="image_detail_description">imageRecipeDetail</string>
</resources>