<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.recipe_detail.RecipeDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/collapsingToolbarImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    android:contentDescription="@string/image_detail_description"/>

                <ProgressBar
                    android:id="@+id/collapsingToolbarProgress"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:visibility="visible"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/recipeDetailToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_bg"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">
            <TextView
                android:id="@+id/recipeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <LinearLayout
                android:id="@+id/informationRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/recipeTitle">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_access_time"
                        android:contentDescription="@string/image_icon_description"
                        app:tint="@color/gray" />
                    <TextView
                        android:id="@+id/readyInMinutesTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginLeft="5dp"
                        android:textSize="12sp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="10dp"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/heart_beat"
                        android:contentDescription="@string/image_icon_description"
                        app:tint="@color/gray" />
                    <TextView
                        android:id="@+id/healthScoreTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginLeft="5dp"
                        android:textSize="12sp"
                        android:textStyle="bold"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/descriptionContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/informationRow">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/description_title"/>
                <TextView
                    android:id="@+id/recipeDescriptionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ingredientsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/descriptionContainer">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/ingredients_title"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recipeIngredientsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <Button
                android:id="@+id/goToLocationButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/ingredientsContainer"
                android:text="@string/go_to_map_action"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>